--- a/tutorial.html
+++ b/tutorial.html
@@ -24,8 +24,10 @@
       <div class="row">
         <div class="tutorial">
           <nav class="section home">
-            <i class="material-icons">keyboard_backspace</i>
-            <span>Tracing Academy</span>
+            <a href="home.html">
+              <i class="material-icons">keyboard_backspace</i>
+              <span>Tracing Academy</span>
+            </a>
           </nav>
           <nav class="section sublesson">
             <h1>{{sublessonname}}</h1>
