inject html changes

--- a/home.html
+++ b/home.html
@@ -50,14 +50,14 @@
           </div>
         <!-- </a> -->
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="pic.png">
+          <img class="card-img-top" src="pic2.png">
           <div class="card-body">
             <h5 class="card-title">Tagging Service-to-Service Communications</h5>
             <p class="card-text">Some quick example text to build on the card title </p>
           </div>
         </div>
         <div class="card mb-4 box-shadow">
-          <img class="card-img-top" src="pic.png">
+          <img class="card-img-top" src="pic3.png">
           <div class="card-body">
             <h5 class="card-title">Get Statistical-driven Insights with Correlations</h5>
             <p class="card-text">Some quick example text to build on the card title and </p>
